Cleaned the files

--- a/crosscoder/collect_latent_activations.ipynb
+++ b/crosscoder/collect_latent_activations.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "040b30f6-00c2-4031-8654-b0aaa9103697",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_715881/1319403643.py:2: FutureWarning: In the future `np.bool` will be defined as the corresponding NumPy scalar.\n",
-      "  if not hasattr(np, \"bool\"):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "if not hasattr(np, \"bool\"):\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2662c70a-d492-4c3c-abe3-acd5c97c44ea",
    "metadata": {},
    "outputs": [],
@@ -33,6 +24,7 @@
     "\n",
     "import torch as th\n",
     "from tqdm.auto import trange\n",
+    "from tqdm import tqdm\n",
     "from transformers import AutoTokenizer\n",
     "from dictionary_learning.cache import PairedActivationCache\n",
     "from dictionary_learning.dictionary import BatchTopKCrossCoder\n",
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8dbc5a99-05d2-41f4-ad38-111c30a15e9e",
    "metadata": {},
    "outputs": [],
@@ -58,69 +50,30 @@
     "    Returns:\n",
     "        The loaded dictionary model\n",
     "    \"\"\"\n",
-    "    # Check if it's a HuggingFace Hub model\n",
-    "    if \"/\" not in str(model_name) or not Path(model_name).exists():\n",
-    "        # Legacy model\n",
-    "        if str(model_name) in df_hf_repo_legacy:\n",
-    "            model_name = df_hf_repo_legacy[str(model_name)]\n",
-    "        else:\n",
-    "            model_name = str(model_name)\n",
-    "        if \"/\" not in str(model_name):\n",
-    "            model_id = f\"{author}/{str(model_name)}\"\n",
-    "        else:\n",
-    "            model_id = model_name\n",
-    "        # Download config to determine model type\n",
-    "        if file_exists(model_id, \"trainer_config.json\", repo_type=\"model\"):\n",
-    "            config_path = hf_hub_download(\n",
-    "                repo_id=model_id, filename=\"trainer_config.json\"\n",
-    "            )\n",
-    "            with open(config_path, \"r\") as f:\n",
-    "                config = json.load(f)[\"trainer\"]\n",
     "\n",
-    "            # Determine model class based on config\n",
-    "            if \"dict_class\" in config and config[\"dict_class\"] in [\n",
-    "                \"BatchTopKSAE\",\n",
-    "                \"CrossCoder\",\n",
-    "                \"BatchTopKCrossCoder\",\n",
-    "            ]:\n",
-    "                return eval(\n",
-    "                    f\"{config['dict_class']}.from_pretrained(model_id, from_hub=True)\"\n",
-    "                )\n",
-    "            else:\n",
-    "                raise ValueError(f\"Unknown model type: {config['dict_class']}\")\n",
-    "        else:\n",
-    "            logger.info(\n",
-    "                f\"No config found for {model_id}, relying on is_sae={is_sae} arg to determine model type\"\n",
-    "            )\n",
-    "            # If no model_type in config, try to infer from other fields\n",
-    "            if is_sae:\n",
-    "                return BatchTopKSAE.from_pretrained(model_id, from_hub=True)\n",
-    "            else:\n",
-    "                return CrossCoder.from_pretrained(model_id, from_hub=True)\n",
+    "    # Local model\n",
+    "    model_path = Path(model_name)\n",
+    "    if not model_path.exists():\n",
+    "        raise ValueError(f\"Local model {model_name} does not exist\")\n",
+    "\n",
+    "    # Load the config\n",
+    "    with open(model_path.parent / \"config.json\", \"r\") as f:\n",
+    "        config = json.load(f)[\"trainer\"]\n",
+    "\n",
+    "    # Determine model class based on config\n",
+    "    if \"dict_class\" in config and config[\"dict_class\"] in [\n",
+    "        \"BatchTopKSAE\",\n",
+    "        \"CrossCoder\",\n",
+    "        \"BatchTopKCrossCoder\",\n",
+    "    ]:\n",
+    "        return eval(f\"{config['dict_class']}.from_pretrained(model_path)\")\n",
     "    else:\n",
-    "        # Local model\n",
-    "        model_path = Path(model_name)\n",
-    "        if not model_path.exists():\n",
-    "            raise ValueError(f\"Local model {model_name} does not exist\")\n",
-    "\n",
-    "        # Load the config\n",
-    "        with open(model_path.parent / \"config.json\", \"r\") as f:\n",
-    "            config = json.load(f)[\"trainer\"]\n",
-    "\n",
-    "        # Determine model class based on config\n",
-    "        if \"dict_class\" in config and config[\"dict_class\"] in [\n",
-    "            \"BatchTopKSAE\",\n",
-    "            \"CrossCoder\",\n",
-    "            \"BatchTopKCrossCoder\",\n",
-    "        ]:\n",
-    "            return eval(f\"{config['dict_class']}.from_pretrained(model_path)\")\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unknown model type: {config['dict_class']}\")\n"
+    "        raise ValueError(f\"Unknown model type: {config['dict_class']}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5c26ba87-3652-4159-a269-3e9db30b12cb",
    "metadata": {},
    "outputs": [],
@@ -269,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ff5ce2e1-0c36-4400-9cb3-24a74e40dc25",
    "metadata": {},
    "outputs": [],
@@ -350,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "af65bea6-60b0-44a0-9270-75928907cb92",
    "metadata": {},
    "outputs": [],
@@ -381,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "37df8431-2e35-4962-b18d-398863245cc3",
    "metadata": {},
    "outputs": [],
@@ -455,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b5ed4e43-4c8c-4763-bbee-75c74b97f3e6",
    "metadata": {},
    "outputs": [],
@@ -616,199 +569,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3c1d2b40-97b3-4faf-bbae-0c2da9ce8d75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_model_path = \"/pscratch/sd/r/ritesh11/temp_dir/crosscoder_checkpoints/Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder/checkpoint_90000.pt\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e7009e0b-9483-49d2-9473-14586c7c57f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading true cache from model_activations/base/MATS_true_processed/test/layer_20_out and model_activations/finetune/MATS_true_processed/test/layer_20_out\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/homes/r/ritesh11/.conda/envs/myenv/lib/python3.10/site-packages/dictionary_learning/cache.py:773: FutureWarning: submodule_name parameter will be required in future versions. Please specify the submodule name when creating ActivationCache instances and specify the store_dir without the submodule folder.\n",
-      "  self.activation_cache_1 = ActivationCache(store_dir_1, submodule_name)\n",
-      "/global/homes/r/ritesh11/.conda/envs/myenv/lib/python3.10/site-packages/dictionary_learning/cache.py:774: FutureWarning: submodule_name parameter will be required in future versions. Please specify the submodule name when creating ActivationCache instances and specify the store_dir without the submodule folder.\n",
-      "  self.activation_cache_2 = ActivationCache(store_dir_2, submodule_name)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading false cache from model_activations/base/MATS_false_processed/test/layer_20_out and model_activations/finetune/MATS_false_processed/test/layer_20_out\n",
-      "tensor([ 1774,  3609,  6425, 15943, 18232, 24833, 30340, 36090, 43592, 44647,\n",
-      "        51653, 51802, 53929, 56428, 57787, 58237])\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ff129086ed941e985612355237c28a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3968 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c44a33935a8a4f25a87734575652bd77",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3968 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting activations for 3968 True sequences and 3968 False sequences\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1556c18a0f24c54ae36b6f8090cedfa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3968 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3ab2e07b0e1487c94b037526595aabb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3968 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum activation statistics:\n",
-      "  Average: 282.5135\n",
-      "  Maximum: 479.5937\n",
-      "  Minimum: 175.3419\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'tqdm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m latent_activation \u001b[38;5;241m=\u001b[39m \u001b[43mcollect_dictionary_activations\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcrosscoder\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mdict_model_path\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[8], line 152\u001b[0m, in \u001b[0;36mcollect_dictionary_activations\u001b[0;34m(dictionary_model_name, dictionary_model_path, activation_store_dir, base_model, finetune_model, layer, latent_activations_dir, split, load_from_disk)\u001b[0m\n\u001b[1;32m    148\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Maximum: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcombined_max_activations\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;241m.\u001b[39mitem()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    149\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Minimum: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcombined_max_activations\u001b[38;5;241m.\u001b[39mmin()\u001b[38;5;241m.\u001b[39mitem()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 152\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mLatentActivationCache\u001b[49m\u001b[43m(\u001b[49m\u001b[43mout_dir\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[4], line 14\u001b[0m, in \u001b[0;36mLatentActivationCache.__init__\u001b[0;34m(self, latent_activations_dir, expand, offset, use_sparse_tensor, device)\u001b[0m\n\u001b[1;32m     11\u001b[0m     latent_activations_dir \u001b[38;5;241m=\u001b[39m Path(latent_activations_dir)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Create progress bar for 7 files to load\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m pbar \u001b[38;5;241m=\u001b[39m \u001b[43mtqdm\u001b[49m(total\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m7\u001b[39m, desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading cache files\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     16\u001b[0m pbar\u001b[38;5;241m.\u001b[39mset_postfix_str(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading out_acts.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39macts \u001b[38;5;241m=\u001b[39m th\u001b[38;5;241m.\u001b[39mload(latent_activations_dir \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mout_acts.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m, weights_only\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'tqdm' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "latent_activation = collect_dictionary_activations('crosscoder',dict_model_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "83ecb3b5-f085-434d-9d50-3a9960714b0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "a5d8c237-04f4-480e-9727-6bb9490f8864",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cache files: 100%|██████████| 7/7 [00:00<00:00, 111.48it/s, Loading seq_ranges.pt]      \n"
-     ]
-    }
-   ],
-   "source": [
-    "la = LatentActivationCache(\"/pscratch/sd/r/ritesh11/temp_dir/latent_activations/crosscoder\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "5be971dd-a208-4d82-92b1-43766467d910",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2023])\n"
-     ]
-    }
-   ],
-   "source": [
-    "for q in la:\n",
-    "    print(q[0].shape)\n",
-    "    break"
+    "dict_model_path = \"crosscoder_checkpoints/Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder/checkpoint_90000.pt\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27aefd4b-a461-4468-b7aa-04fbd1022779",
+   "id": "e7009e0b-9483-49d2-9473-14586c7c57f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "latent_activation = collect_dictionary_activations('crosscoder',dict_model_path)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -820,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
