--- a/crosscoder/explore_examples-online.ipynb
+++ b/crosscoder/explore_examples-online.ipynb
@@ -166,13 +166,13 @@
     "    coder = coder.to(\"cuda:0\")\n",
     "\n",
     "    base_model = load_model(\n",
-    "        \"/pscratch/sd/r/ritesh11/temp_dir/Qwen3-1.7B\",\n",
+    "        \"Qwen3-1.7B\",\n",
     "        torch_dtype=th.bfloat16,\n",
     "        attn_implementation=\"flash_attention_2\",\n",
     "        device_map='cuda',\n",
     "    )\n",
     "    finetune_model = load_model(\n",
-    "        \"/pscratch/sd/r/ritesh11/temp_dir/trained_models/base\",\n",
+    "        \"trained_models/base\",\n",
     "        torch_dtype=th.bfloat16,\n",
     "        attn_implementation=\"flash_attention_2\",\n",
     "        device_map='cuda',\n",
@@ -191,7 +191,7 @@
     "df[\"max_activations\"] = df[[\"max_activations_true\", \"max_activations_false\"]].max(axis=1)\n",
     "max_acts = df[\"max_activations\"].dropna().to_dict()\n",
     "\n",
-    "crosscoder_path = \"/pscratch/sd/r/ritesh11/temp_dir/crosscoder_checkpoints/Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder/checkpoint_90000.pt\""
+    "crosscoder_path = \"crosscoder_checkpoints/Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder/checkpoint_90000.pt\""
    ]
   },
   {
@@ -325,167 +325,13 @@
     "\n",
     "visualize_latent_highlights(bm.tokenizer, toks, acts, latent_idx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 596,
-   "id": "13e50cf0-d2c6-455e-86e3-a55b269e72b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "max_activations_true         81.471054\n",
-       "max_activations_false       479.593719\n",
-       "frequencies_true              0.000077\n",
-       "frequencies_false             0.003284\n",
-       "total_tokens_true              8205413\n",
-       "total_tokens_false             7485534\n",
-       "latent_id                        18232\n",
-       "dec_norm_diffs                0.149763\n",
-       "latent_tag               Finetune_only\n",
-       "max_activations             479.593719\n",
-       "Name: 18232, dtype: object"
-      ]
-     },
-     "execution_count": 596,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.iloc[18232]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "id": "1dc05243-4baf-4b70-9293-4b7b54520ab6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_nth_biggest_latent(acts: th.Tensor, n: int = 1):\n",
-    "    \"\"\"\n",
-    "    Get the n-th largest latent activation overall from acts,\n",
-    "    but only for tokens with index > 0 and < max_seq_len - 1.\n",
-    "\n",
-    "    Args:\n",
-    "        acts (Tensor): shape (toks, dict_size)\n",
-    "        n (int): which largest activation to return (1 = largest, 2 = second largest, ...)\n",
-    "\n",
-    "    Returns:\n",
-    "        value (float): activation value\n",
-    "        token_idx (int): index of the token\n",
-    "        latent_idx (int): index of the latent\n",
-    "    \"\"\"\n",
-    "    seq_len, dict_size = acts.shape\n",
-    "\n",
-    "    # restrict to tokens (1 ... seq_len-2)\n",
-    "    restricted = acts[2:seq_len-1]\n",
-    "\n",
-    "    # Flatten while keeping track of offset\n",
-    "    flat = restricted.view(-1)\n",
-    "\n",
-    "    # Get top-n activations\n",
-    "    top_vals, top_pos = th.topk(flat, n)\n",
-    "\n",
-    "    # Take the n-th (1-indexed)\n",
-    "    value = top_vals[-1].item()\n",
-    "    pos = top_pos[-1].item()\n",
-    "\n",
-    "    # Map back to (token, latent), adding +1 since we sliced\n",
-    "    token_idx = pos // dict_size + 1\n",
-    "    latent_idx = pos % dict_size\n",
-    "\n",
-    "    return value, token_idx, latent_idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "id": "f67cd2e7-6548-4875-8e47-538615137baf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_latent_rank(acts: th.Tensor, latent_idx: int) -> int:\n",
-    "    \"\"\"\n",
-    "    Get the rank of a latent based on its max activation across tokens.\n",
-    "\n",
-    "    Args:\n",
-    "        acts (Tensor): shape (toks, dict_size)\n",
-    "        latent_idx (int): index of the latent\n",
-    "\n",
-    "    Returns:\n",
-    "        rank (int): 1 = highest max, 2 = second highest max, ...\n",
-    "    \"\"\"\n",
-    "    # max activation per latent across tokens\n",
-    "    max_vals, _ = acts.max(dim=0)   # shape: (dict_size,)\n",
-    "    \n",
-    "    # value of the chosen latent\n",
-    "    value = max_vals[latent_idx].item()\n",
-    "    \n",
-    "    # rank = 1 + number of latents with strictly greater value\n",
-    "    rank = (max_vals > value).sum().item() + 1\n",
-    "    \n",
-    "    return rank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "id": "6da73477-7fdf-4995-bafd-63865e42929b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10204"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_latent_rank(acts,latent_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "id": "6bb342ca-7ccb-4e6b-ad80-e1c93a5fb211",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.0, 1, 9547)"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_nth_biggest_latent(acts,10203)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b95dbbf-21c2-4f48-bba6-7e1302709e89",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -497,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
