--- a/crosscoder/train_crosscoder.ipynb
+++ b/crosscoder/train_crosscoder.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d7e824b4-4c30-4e7c-aa0a-df18540445c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_404293/1319403643.py:2: FutureWarning: In the future `np.bool` will be defined as the corresponding NumPy scalar.\n",
-      "  if not hasattr(np, \"bool\"):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "if not hasattr(np, \"bool\"):\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "99206e66-e2c0-4716-b1da-3ef8ed344ac5",
    "metadata": {},
    "outputs": [],
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "74ef003c-7955-4ada-a5c0-2095c7482881",
    "metadata": {},
    "outputs": [],
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bd1dd2e7-93c4-42b3-b486-7a4ef936c25b",
    "metadata": {},
    "outputs": [],
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "35fcc3a9-2c46-46bf-b4b9-bb73fc16886b",
    "metadata": {},
    "outputs": [],
@@ -217,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e5535001-019b-4967-ba46-34caa7a37034",
    "metadata": {},
    "outputs": [],
@@ -227,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0ca27943-b982-4161-b00c-03d50a47e922",
    "metadata": {},
    "outputs": [],
@@ -237,116 +228,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "16835b3a-79e4-4aee-b393-4acb669f6c66",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('model_activations')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "activation_store_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a171d345-c6c9-478b-ad1d-889221dae6aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading true cache from model_activations/base/MATS_true_processed/train/layer_20_out and model_activations/finetune/MATS_true_processed/train/layer_20_out\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/homes/r/ritesh11/.conda/envs/myenv/lib/python3.10/site-packages/dictionary_learning/cache.py:773: FutureWarning: submodule_name parameter will be required in future versions. Please specify the submodule name when creating ActivationCache instances and specify the store_dir without the submodule folder.\n",
-      "  self.activation_cache_1 = ActivationCache(store_dir_1, submodule_name)\n",
-      "/global/homes/r/ritesh11/.conda/envs/myenv/lib/python3.10/site-packages/dictionary_learning/cache.py:774: FutureWarning: submodule_name parameter will be required in future versions. Please specify the submodule name when creating ActivationCache instances and specify the store_dir without the submodule folder.\n",
-      "  self.activation_cache_2 = ActivationCache(store_dir_2, submodule_name)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading false cache from model_activations/base/MATS_false_processed/train/layer_20_out and model_activations/finetune/MATS_false_processed/train/layer_20_out\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "true_cache, false_cache = load_activation_dataset(activation_store_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ab49773e-322d-4316-abcb-ef3f76788ae3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([35713]), 73698484)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "true_cache.sequence_ranges.shape, len(true_cache)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "eb3ede1b-ab83-49b0-8473-4a8a66ed526c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([35713]), 66987867)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "false_cache.sequence_ranges.shape, len(false_cache)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8687e88c-d730-4cef-bcde-ebc8443a8638",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TOTAL TOKENS: 140.69M\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_tokens = len(true_cache) + len(false_cache)\n",
     "print(f\"TOTAL TOKENS: {total_tokens/1e6:.2f}M\")"
@@ -354,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d70e5c41-a0dd-4f50-b50c-fcc8918ed056",
    "metadata": {},
    "outputs": [],
@@ -372,49 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1d9352b1-7ff0-45d2-b80a-427679e66d8d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of shards per dataset: 50\n",
-      "Using 2 epochs of local shuffling.\n",
-      "Number of shards per dataset: 50\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:01<00:00, 33.32it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of shards per dataset: 50\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:01<00:00, 36.83it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shuffled indices: torch.Size([200000000])\n",
-      "Shuffled train dataset with 200000000 samples.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shard_size = false_cache.activation_cache_1.config[\"shard_size\"]\n",
     "num_shards_per_dataset = num_samples_per_dataset // shard_size + (\n",
@@ -439,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "97136e7c-8566-40ac-8421-eb1a3a88fbcc",
    "metadata": {},
    "outputs": [],
@@ -450,19 +336,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a84f74f9-69ec-4f62-9ae4-8d56838f0381",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ACTIVATION_DIM: 2048\n",
-      "DICTIONARY SIZE: 65536\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"ACTIVATION_DIM: {activation_dim}\")\n",
     "print(f\"DICTIONARY SIZE: {dictionary_size}\")"
@@ -470,40 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "cd534331-dc8f-46e4-8fe2-6dd101ae5c1c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([200000000])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset.indices.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b13394d4-561d-4b8c-92e1-5588f7e2f03b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading true cache from model_activations/base/MATS_true_processed/test/layer_20_out and model_activations/finetune/MATS_true_processed/test/layer_20_out\n",
-      "Loading false cache from model_activations/base/MATS_false_processed/test/layer_20_out and model_activations/finetune/MATS_false_processed/test/layer_20_out\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "true_cache_val, false_cache_val = load_activation_dataset(\n",
     "    activation_store_dir,\n",
@@ -522,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b5386cc2-b278-4c01-beed-c286384407a2",
    "metadata": {},
    "outputs": [],
@@ -538,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "1c85a08f-30e8-4f15-adfb-fac416b0764c",
    "metadata": {},
    "outputs": [],
@@ -548,40 +405,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "ab8086ac-295b-4f5a-8edf-00975b7e8c45",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2048"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "args.batch_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "a7561c0d-d7ac-4677-b4f5-0e1dab752b25",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on device=cuda.\n",
-      "Loss type: crosscoder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = \"cuda\" if th.cuda.is_available() else \"cpu\"\n",
     "print(f\"Training on device={device}.\")\n",
@@ -590,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f562d364-53d9-4a74-bf5f-5d51b34e7de9",
    "metadata": {},
    "outputs": [],
@@ -628,61 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "23f32f0d-28e2-4098-9e70-4ab8a911795f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'trainer': dictionary_learning.trainers.crosscoder.BatchTopKCrossCoderTrainer,\n",
-       " 'dict_class': dictionary_learning.dictionary.BatchTopKCrossCoder,\n",
-       " 'activation_dim': 2048,\n",
-       " 'dict_size': 65536,\n",
-       " 'lr': 0.0001,\n",
-       " 'device': 'cuda',\n",
-       " 'warmup_steps': 1000,\n",
-       " 'layer': 20,\n",
-       " 'lm_name': 'Qwen',\n",
-       " 'wandb_name': 'Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder',\n",
-       " 'k': 100,\n",
-       " 'k_max': None,\n",
-       " 'k_annealing_steps': 0,\n",
-       " 'steps': 97656,\n",
-       " 'auxk_alpha': 0.03125,\n",
-       " 'dict_class_kwargs': {'same_init_for_all_layers': False,\n",
-       "  'norm_init_scale': 1.0,\n",
-       "  'init_with_transpose': True,\n",
-       "  'encoder_layers': None,\n",
-       "  'code_normalization': 'crosscoder',\n",
-       "  'code_normalization_alpha_sae': 1.0,\n",
-       "  'code_normalization_alpha_cc': 0.1},\n",
-       " 'pretrained_ae': None}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer_cfg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "1e1b636c-25bd-4a9b-9995-4e41b58fecfd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on 200000000 token activations.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Training on {len(train_dataset)} token activations.\")\n",
     "dataloader = th.utils.data.DataLoader(\n",
@@ -708,99 +504,7 @@
    "execution_count": null,
    "id": "1966c462-a0fc-407b-a62a-fa172a7a5ccb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Failed to detect the name of this notebook. You can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33m2021-ritesh-bhalerao\u001b[0m (\u001b[33mves_ritesh\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.21.0"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/pscratch/sd/r/ritesh11/temp_dir/wandb/run-20250821_042351-68qkjlaz</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/ves_ritesh/crosscoder/runs/68qkjlaz' target=\"_blank\">Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder</a></strong> to <a href='https://wandb.ai/ves_ritesh/crosscoder' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/ves_ritesh/crosscoder' target=\"_blank\">https://wandb.ai/ves_ritesh/crosscoder</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/ves_ritesh/crosscoder/runs/68qkjlaz' target=\"_blank\">https://wandb.ai/ves_ritesh/crosscoder/runs/68qkjlaz</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/homes/r/ritesh11/.conda/envs/myenv/lib/python3.10/site-packages/dictionary_learning/training.py:286: UserWarning: Error saving config: 'DataLoader' object has no attribute 'config'\n",
-      "  warn(f\"Error saving config: {e}\")\n",
-      "  0%|          | 0/97656 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving at step 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 186/97656 [01:29<11:26:07,  2.37it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ae = trainSAE(\n",
     "    data=dataloader,\n",
@@ -828,9 +532,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -842,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
