--- a/crosscoder/analyze_crosscoder.ipynb
+++ b/crosscoder/analyze_crosscoder.ipynb
@@ -160,6 +160,11 @@
    "outputs": [],
    "source": [
     "# Create masks for each category\n",
+    "norms = coder.decoder.weight.norm(dim=-1)\n",
+    "norm_diffs = (\n",
+    "    (norms[base_layer] - norms[instruct_layer]) / norms.max(dim=0).values + 1\n",
+    ") / 2\n",
+    "\n",
     "finetune_only_mask = norm_diffs[alive_mask] <= 0.2\n",
     "base_only_mask = norm_diffs[alive_mask] >= 0.8\n",
     "shared_mask = (0.4 <= norm_diffs[alive_mask]) & (norm_diffs[alive_mask] <= 0.6)\n",
